    main-menu tag, e.g. if a progress bar is started before asking any
    questions at high priority. This is just a hack; Attilio needs to
    investigate the right solution. Reducing the amount of hardcoding of
    main-menu would be nice ...
  * Don't bother to save the target templatedb in debconf-copydb unless any
    templates were actually changed.

  [ Tollef Fog Heen ]
  * When copying questions in debconf-copydb, make sure that the template
    referred to exists in the target database.

  [ Attilio Fiandrotti ]
  * Better and more flexible questionbox widget packing system.
  * The main-menu hack can now be disabled at compile time.

 -- Colin Watson <cjwatson@debian.org>  Wed, 10 Aug 2005 18:20:15 +0100

cdebconf (0.84) unstable; urgency=low

  * Fix horrible argv initialisation code in gtk frontend.
  * Add gtk frontend to cdebconf.deb; enable cdebconf-gtk-udeb.
  * Fix some compiler warnings in gtk frontend.
  * Reap child processes when SIGCHLD is received, otherwise we may hang in
    read().

  * Updated translations:
    - German (de.po)
    - Basque (eu.po)
    - Persian (fa.po) by Arash Bijanzadeh
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov

 -- Colin Watson <cjwatson@debian.org>  Fri,  5 Aug 2005 14:10:28 +0100

cdebconf (0.83) unstable; urgency=low

  * Disable flow control in the newt frontend. It's very confusing when you
    press Ctrl-S by accident and wonder why the installer stopped accepting
    input.
  * Fix memory leak in confmodule_communicate.

  * Updated translations:
    - German (de.po) by Dennis Stampfer
    - Esperanto (eo.po) by Serge Leblanc
    - Spanish (es.po) by Javier Fernández-Sanguino Peña
    - Basque (eu.po) by Piarre Beobide Egaña
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Macedonian (mk.po) by Georgi Stanojevski
    - Dutch (nl.po) by Bart Cornelis
    - Polish (pl.po) by Bartosz Fenski
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Russian (ru.po) by Yuri Kozlov