@@ -10,6 +10,10 @@ cdebconf (0.85) UNRELEASED; urgency=low
     main-menu would be nice ...
   * Don't bother to save the target templatedb in debconf-copydb unless any
     templates were actually changed.
+  * Make debconf-loadtemplate check whether each question is registered to
+    some different template and, if so, re-register them to the loaded
+    template. This causes preseeded-as-seen questions to be displayed using
+    their real templates rather than debian-installer/dummy.
 
   [ Tollef Fog Heen ]
   * When copying questions in debconf-copydb, make sure that the template
